syntax = "proto2";

package douyin.extra.first;

option go_package = "../pkg;message";

import "user.proto";

/*
    /douyin/favorite/action -点赞
    点赞、取消点赞
    POST
*/

message douyin_favorite_action_request {
    required int64 user_id = 1; // 用户id​
    required string token = 2; // 用户鉴权token
    required int64 video_id = 3; // 视频id​
    required int32 action_type = 4; // 1-点赞，2-取消点赞
}
message douyin_favorite_action_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    optional string status_msg = 2; // 返回状态描述​
}

/*
    /douyin/favorite/list -点赞列表
    登录用户的所有点赞视频
    GET
*/

message douyin_favorite_list_request {
    required int64 user_id = 1; // 用户id​
    required string token = 2; // 用户鉴权token​
}
message douyin_favorite_list_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    optional string status_msg = 2; // 返回状态描述​
    repeated douyin.core.Video video_list = 3; // 用户点赞视频列表​
}

/*
message Video {
    required int64 id = 1; // 视频唯一标识​
    required douyin.core.User author = 2; // 视频作者信息​
    required string play_url = 3; // 视频播放地址​
    required string cover_url = 4; // 视频封面地址
    required int64 favorite_count = 5; // 视频的点赞总数​
    required int64 comment_count = 6; // 视频的评论总数​
    required bool is_favorite = 7; // true-已点赞，false-未点赞
}
*/