syntax = "proto2";
package douyin.core;
option go_package = "../pkg;message";

/*
    /douyin/user/register/ -用户信息
    获取登录用户的id、昵称、关注数、粉丝数
    GET
*/

message douyin_user_request {
    required int64 user_id = 1; // 用户id​
    required string token = 2; // 用户鉴权token​
}
message douyin_user_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    optional string status_msg = 2; // 返回状态描述
    required User user = 3; // 用户信息​
}
message User {
    required int64 id = 1; // 用户id​
    required string name = 2; // 用户名称​
    optional int64 follow_count = 3; // 关注总数
    optional int64 follower_count = 4; // 粉丝总数​
    required bool is_follow = 5; // true-已关注，false-未关注
}
message Video {
    required int64 id = 1; // 视频唯一标识​
    required User author = 2; // 视频作者信息
    required string play_url = 3; // 视频播放地址
    required string cover_url = 4; // 视频封面地址​
    required int64 favorite_count = 5; // 视频的点赞总数​
    required int64 comment_count = 6; // 视频的评论总数​
    required bool is_favorite = 7; // true-已点赞，false-未点赞​
}